--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
+    "express-recaptcha": "^2.1.0",
     "mongoose": "^4.5.4"
   }
 }
